--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,4 +153,7 @@ dependencies {
     implementation "androidx.compose.material3:material3:1.1.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.5.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.5.3"
+
+    implementation("io.coil-kt:coil-compose:2.3.0")
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 }
