--- a/app/build.gradle
+++ b/app/build.gradle
@@ -156,4 +156,7 @@ dependencies {
 
     implementation("io.coil-kt:coil-compose:2.3.0")
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation "androidx.compose.foundation:foundation:1.4.0"
+    implementation "androidx.compose.material:material:1.4.0"
+    implementation "androidx.compose.material:material-icons-extended:1.4.0"
 }
